<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twilio SMS Babel</string>
    <string name="action_settings">Settings</string>
    <string name="directions">Grab a contact, set a language he understands and just text him!</string>
    <string name="grab_contact_hint">Destination</string>    
    <string name="send_button">Send</string>
    <string name="contact_list">Contacts</string>
    <string name="text_label">Text:</string>
    
    <string name="language_prompt">Choose your contact\'s language</string>
    <string-array name="language_arrays">
        <item>Choose your contact\'s language</item>
        <item>ENGLISH</item>
        <item>GERMAN</item>        
        <item>SPANISH</item>
        <item>FRENCH</item>
        <item>CHINESE</item>
        <item>ARABIC</item>
        <item>CATALAN</item>
        <item>CZECH</item>
        <item>DANISH</item>
        <item>FINNISH</item>
        <item>GREEK</item>
        <item>HEBREW</item>
        <item>LITHUANIAN</item>
        <item>POLISH</item>
        <item>RUSSIAN</item>
        <item>URDU</item>
        <item>VIETNAMESE</item>
    </string-array>

</resources>
